@@ -897,34 +897,22 @@ static void domodem(void)
   }
 }
 
-
-/*
- * Screen and keyboard menu.
- */
-static void doscrkeyb(void)
+static void do_menu_screen(void)
 {
-  WIN *w, *w1;
+  WIN *w;
+  int miny = 4, maxy = 18;
   int c;
   int once = 0;
   int clr = 1;
-  char buf[16];
-  int miny = 1, maxy = 23;
   int old_stat = P_STATLINE[0];
-  FILE *fp;
-  char *command_key           = _(" A - Command key is         :");
-  char *backspace_key         = _(" B - Backspace key sends    :");
+
   char *status_line           = _(" C - Status line is         :");
-  char *alarm_sound           = _(" D - Alarm sound            :");
   char *foreground_color_menu = _(" E - Foreground Color (menu):");
   char *background_color_menu = _(" F - Background Color (menu):");
   char *foreground_color_term = _(" G - Foreground Color (term):");
   char *background_color_term = _(" H - Background Color (term):");
   char *foreground_color_stat = _(" I - Foreground Color (stat):");
   char *background_color_stat = _(" J - Background Color (stat):");
-  char *history_buffer_size   = _(" K - History Buffer Size    :");
-  char *macros_file           = _(" L - Macros file            :");
-  char *macros_enabled        = _(" N - Macros enabled         :");
-  char *character_conversion  = _(" O - Character conversion   :");
   char *add_linefeed          = _(" P - Add linefeed           :");
   char *local_echo_str        = _(" Q - Local echo             :");
   char *line_wrap             = _(" R - Line Wrap              :");
@@ -933,31 +921,17 @@ static void doscrkeyb(void)
   char *use_line_timestamp    = _(" U - Line Timestamp         :");
   char *question              = _("Change which setting?  (Esc to exit)");
 
-  w = mc_wopen(5, miny, 70, maxy, BDOUBLE, stdattr, mfcolor, mbcolor, 0, 0, 1);
+  w = mc_wopen(6, miny, 70, maxy, BDOUBLE, stdattr, mfcolor, mbcolor, 0, 0, 1);
 
-  mc_wtitle(w, TMID, _("Screen and keyboard"));
+  mc_wtitle(w, TMID, _("Screen"));
 
-  mc_wprintf(w, "%s %s\n", command_key, P_ESCAPE);
-  mc_wprintf(w, "%s %s\n", backspace_key, P_BACKSPACE);
   mc_wprintf(w, "%s %s\n", status_line, _(P_STATLINE));
-  mc_wprintf(w, "%s %s\n", alarm_sound, _(P_SOUND));
-  /* fmg - colors support */
   mc_wprintf(w, "%s %s\n", foreground_color_menu, _(J_col[mfcolor]));
   mc_wprintf(w, "%s %s\n", background_color_menu, _(J_col[mbcolor]));
   mc_wprintf(w, "%s %s\n", foreground_color_term, _(J_col[tfcolor]));
   mc_wprintf(w, "%s %s\n", background_color_term, _(J_col[tbcolor]));
   mc_wprintf(w, "%s %s\n", foreground_color_stat, _(J_col[sfcolor]));
   mc_wprintf(w, "%s %s\n", background_color_stat, _(J_col[sbcolor]));
-
-  /* MARK updated 02/17/95 - Configurable history buffer size */
-  mc_wprintf(w, "%s %s\n", history_buffer_size, P_HISTSIZE);
-
-  /* fmg - macros support */
-  mc_wprintf(w, "%s %s\n", macros_file, P_MACROS);
-  mc_wprintf(w, _(" M - Edit Macros\n"));
-  mc_wprintf(w, "%s %s\n", macros_enabled, _(P_MACENAB));
-  mc_wprintf(w, "%s %s\n", character_conversion, P_CONVF);
-
   mc_wprintf(w, "%s %s\n", add_linefeed, _(P_ADDLINEFEED));
   mc_wprintf(w, "%s %s\n", local_echo_str, _(P_LOCALECHO));
   mc_wprintf(w, "%s %s\n", line_wrap, _(P_LINEWRAP));
@@ -981,12 +955,7 @@ static void doscrkeyb(void)
       once = 0;
     } else
       c = rwxgetch();
-#if 0 /* This might save us someday */
-    if (!usecolor && (c >= 'E' && c <= 'J')) {
-      werror(_("You can't change colors in black and white mode"));
-      continue;
-    }
-#endif
+
     switch(c) {
       case '\n':
         /* fmg - sanity checks... "we found the enemy and he is us" :-) */
@@ -1007,6 +976,195 @@ static void doscrkeyb(void)
         /* fmg - I'll let them change sfcolor=sbcolor because it's just
            another way of turning "off" the status line... */
 
+        mc_wclose(w, 1);
+        if (P_STATLINE[0] != old_stat)
+          init_emul(terminal, 0);
+        return;
+      case 'C':
+        if (P_STATLINE[0] == 'e') {
+          psets(P_STATLINE, N_("disabled"));
+          tempst = 1;
+        } else {
+          psets(P_STATLINE, N_("enabled"));
+          /* See if it fits on screen */
+          if (LINES > 24)
+            tempst = 0;
+        }
+        mc_wlocate(w, mbswidth(status_line) + 1, 0);
+        mc_wprintf(w, "%s ", _(P_STATLINE));
+        break;
+      case 'E': /* fmg - letters cycle colors */
+        if (mfcolor == WHITE)
+          mfcolor = BLACK;
+        else
+          mfcolor++;
+        psets(P_MFG, J_col[mfcolor]);
+        mc_wlocate(w, mbswidth(foreground_color_menu) + 1, 1);
+        mc_wprintf(w, "%s   ", _(J_col[mfcolor]));
+        break;
+      case 'F': /* fmg - letters cycle colors */
+        if (mbcolor == WHITE)
+          mbcolor = BLACK;
+        else
+          mbcolor++;
+        psets(P_MBG, J_col[mbcolor]);
+        mc_wlocate(w, mbswidth(background_color_menu) + 1, 2);
+        mc_wprintf(w, "%s   ", _(J_col[mbcolor]));
+        break;
+      case 'G': /* fmg - letters cycle colors */
+        if (tfcolor == WHITE)
+          tfcolor = BLACK;
+        else
+          tfcolor++;
+        psets(P_TFG, J_col[tfcolor]);
+        mc_wlocate(w, mbswidth(foreground_color_term) + 1, 3);
+        mc_wprintf(w, "%s   ", _(J_col[tfcolor]));
+        if (us)
+          vt_pinit(us, tfcolor, tbcolor);
+        break;
+      case 'H': /* fmg - letters cycle colors */
+        if (tbcolor == WHITE)
+          tbcolor = BLACK;
+        else
+          tbcolor++;
+        psets(P_TBG, J_col[tbcolor]);
+        mc_wlocate(w, mbswidth(background_color_term) + 1, 4);
+        mc_wprintf(w, "%s   ", _(J_col[tbcolor]));
+        if (us)
+          vt_pinit(us, tfcolor, tbcolor);
+        break;
+      case 'I': /* fmg - letters cycle colors & redraw stat line */
+        if (sfcolor == WHITE)
+          sfcolor = BLACK;
+        else
+          sfcolor++;
+
+        /* fmg - this causes redraw of status line (if any)
+           in current color */
+
+        if (st) {
+          mc_wclose(st,0);
+          st = mc_wopen(0, LINES - 1, COLS - 1, LINES - 1, BNONE,
+                     XA_NORMAL, sfcolor, sbcolor, 1, 0, 1);
+          show_status();
+        }
+        psets(P_SFG, J_col[sfcolor]);
+        mc_wlocate(w, mbswidth(foreground_color_stat) + 1, 5);
+        mc_wprintf(w, "%s   ", _(J_col[sfcolor]));
+        break;
+      case 'J': /* fmg - letters cycle colors & redraw stat line */
+        if (sbcolor == WHITE)
+          sbcolor = BLACK;
+        else
+          sbcolor++;
+
+        /* fmg - this causes redraw of status line (if any)
+           in current color */
+
+        if (st) {
+          mc_wclose(st,0);
+          st = mc_wopen(0, LINES - 1, COLS - 1, LINES - 1, BNONE,
+                     XA_NORMAL, sfcolor, sbcolor, 1, 0, 0);
+          show_status();
+        }
+        psets(P_SBG, J_col[sbcolor]);
+        mc_wlocate(w, mbswidth(background_color_stat) + 1, 6);
+        mc_wprintf(w, "%s   ", _(J_col[sbcolor]));
+        break;
+      case 'P':
+        psets(P_ADDLINEFEED, yesno(P_ADDLINEFEED[0] == 'N'));
+        mc_wlocate(w, mbswidth(add_linefeed) + 1, 7);
+        mc_wprintf(w, "%s", _(P_ADDLINEFEED));
+        break;
+      case 'Q':
+        psets(P_LOCALECHO, yesno(P_LOCALECHO[0] == 'N'));
+        mc_wlocate(w, mbswidth(local_echo_str) + 1, 8);
+        mc_wprintf(w, "%s", _(P_LOCALECHO));
+        break;
+      case 'R':
+        psets(P_LINEWRAP, yesno(P_LINEWRAP[0] == 'N'));
+        mc_wlocate(w, mbswidth(line_wrap) + 1, 9);
+        mc_wprintf(w, "%s", _(P_LINEWRAP));
+        break;
+      case 'S':
+        psets(P_DISPLAYHEX, yesno(P_DISPLAYHEX[0] == 'N'));
+        mc_wlocate(w, mbswidth(display_hex_str) + 1, 10);
+        mc_wprintf(w, "%s", _(P_DISPLAYHEX));
+        display_hex = strcasecmp(P_DISPLAYHEX, "yes") == 0;
+        break;
+      case 'T':
+        psets(P_ADDCARRIAGERETURN, yesno(P_ADDCARRIAGERETURN[0] == 'N'));
+        mc_wlocate(w, mbswidth(add_carriagereturn) + 1, 11);
+        mc_wprintf(w, "%s", _(P_ADDCARRIAGERETURN));
+        break;
+      case 'U':
+        {
+          char buf[32];
+          int l = toggle_line_timestamp();
+          sprintf(buf, "%d", l);
+          psets(P_LINE_TIMESTAMP, buf);
+          mc_wlocate(w, mbswidth(use_line_timestamp) + 1, 12);
+          mc_wprintf(w, "%-35s", line_timestamp_description());
+        }
+        break;
+     }
+  }
+}
+
+/*
+ * Keyboard and misc menu.
+ */
+static void do_menu_keyboard_and_misc(void)
+{
+  WIN *w, *w1;
+  int c;
+  int once = 0;
+  int clr = 1;
+  int miny = 8, maxy = 17;
+  int old_stat = P_STATLINE[0];
+  FILE *fp;
+  char *command_key           = _(" A - Command key is         :");
+  char *backspace_key         = _(" B - Backspace key sends    :");
+  char *alarm_sound           = _(" D - Alarm sound            :");
+  char *history_buffer_size   = _(" K - History Buffer Size    :");
+  char *macros_file           = _(" L - Macros file            :");
+  char *macros_enabled        = _(" N - Macros enabled         :");
+  char *character_conversion  = _(" O - Character conversion   :");
+  char *question              = _("Change which setting?  (Esc to exit)");
+
+  w = mc_wopen(6, miny, 70, maxy, BDOUBLE, stdattr, mfcolor, mbcolor, 0, 0, 1);
+
+  mc_wtitle(w, TMID, _("Keyboard and Misc"));
+
+  mc_wprintf(w, "%s %s\n", command_key, P_ESCAPE);
+  mc_wprintf(w, "%s %s\n", backspace_key, P_BACKSPACE);
+  mc_wprintf(w, "%s %s\n", alarm_sound, _(P_SOUND));
+  mc_wprintf(w, "%s %s\n", history_buffer_size, P_HISTSIZE);
+  mc_wprintf(w, "%s %s\n", macros_file, P_MACROS);
+  mc_wprintf(w, _(" M - Edit Macros\n"));
+  mc_wprintf(w, "%s %s\n", macros_enabled, _(P_MACENAB));
+  mc_wprintf(w, "%s %s\n", character_conversion, P_CONVF);
+
+  mc_wredraw(w, 1);
+
+  while (1) {
+    if (clr) {
+      mc_wlocate(w, 2, maxy - miny);
+      mc_wprintf(w, "%s ", question);
+      mc_wclreol(w);
+      clr = 0;
+    } else
+      mc_wlocate(w, mbswidth(question) + 3, maxy - miny);
+
+    if (once) {	/* fmg - allow to force looping */
+      c = once;
+      once = 0;
+    } else
+      c = rwxgetch();
+
+    switch(c) {
+      case '\n':
+        /* fmg - sanity checks... "we found the enemy and he is us" :-) */
         /* MARK updated 02/17/95, Warn user to restart */
         /* minicom if they changed history buffer size */
         if (atoi(P_HISTSIZE) != num_hist_lines) {
@@ -1028,41 +1186,44 @@ static void doscrkeyb(void)
           init_emul(terminal, 0);
         return;
       case 'A':
-        w1 = mc_wopen(11, 8, 73, 17, BSINGLE, stdattr, mfcolor, mbcolor, 0, 0, 1);
-        mc_wtitle(w1, TMID, _("Program new command key"));
-        mc_wputs(w1, _(
-	   "\n Press the new command key. If you want to use\n"
-	   " the META or ALT key enter:\n\n"
-	   "  o SPACE if your meta key sets the 8th bit high\n"
-	   "  o ESC   if your meta key sends the ESCAPE prefix (standard)\n"
-           "\n\n Press new command key: "));
-        mc_wredraw(w1, 1);
-        c = wxgetch();
-        mc_wclose(w1, 1);
-        if (c  == ' ')
-          strcpy(buf, N_("Meta-8th bit "));
-        else if (c == 27)
-          strcpy(buf, N_("Escape (Meta)"));
-        else
-          sprintf(buf, "^%c           ", (c & 0x1f) + 'A' - 1);
-        psets(P_ESCAPE, buf);
-        mc_wlocate(w, mbswidth(command_key) + 1, 0);
-        mc_wputs(w, _(buf));
-        clr = 1;
-        alt_override = 0;
-        switch(P_ESCAPE[0]) {
-          case '^':
-            c = P_ESCAPE[1] & 31;
-            break;
-          case 'E':
-            c = 27;
-            break;
-          default:
-            c = 128;
-            break;
+        {
+          char buf[32];
+          w1 = mc_wopen(11, 8, 73, 17, BSINGLE, stdattr, mfcolor, mbcolor, 0, 0, 1);
+          mc_wtitle(w1, TMID, _("Program new command key"));
+          mc_wputs(w1, _(
+             "\n Press the new command key. If you want to use\n"
+             " the META or ALT key enter:\n\n"
+             "  o SPACE if your meta key sets the 8th bit high\n"
+             "  o ESC   if your meta key sends the ESCAPE prefix (standard)\n"
+             "\n\n Press new command key: "));
+          mc_wredraw(w1, 1);
+          c = wxgetch();
+          mc_wclose(w1, 1);
+          if (c  == ' ')
+            strcpy(buf, N_("Meta-8th bit "));
+          else if (c == 27)
+            strcpy(buf, N_("Escape (Meta)"));
+          else
+            sprintf(buf, "^%c           ", (c & 0x1f) + 'A' - 1);
+          psets(P_ESCAPE, buf);
+          mc_wlocate(w, mbswidth(command_key) + 1, 0);
+          mc_wputs(w, _(buf));
+          clr = 1;
+          alt_override = 0;
+          switch(P_ESCAPE[0]) {
+            case '^':
+              c = P_ESCAPE[1] & 31;
+              break;
+            case 'E':
+              c = 27;
+              break;
+            default:
+              c = 128;
+              break;
+          }
+          keyboard(KSETESC, c);
+          show_status();
         }
-        keyboard(KSETESC, c);
-        show_status();
         break;
       case 'B':
         if (P_BACKSPACE[0] == 'D')
@@ -1073,104 +1234,13 @@ static void doscrkeyb(void)
         mc_wprintf(w, "%s ", P_BACKSPACE);
         keyboard(KSETBS, P_BACKSPACE[0] == 'B' ? 8 : 127);
         break;
-      case 'C':
-        if (P_STATLINE[0] == 'e') {
-          psets(P_STATLINE, N_("disabled"));
-          tempst = 1;
-        } else {
-          psets(P_STATLINE, N_("enabled"));
-          /* See if it fits on screen */
-          if (LINES > 24)
-            tempst = 0;
-        }
-        mc_wlocate(w, mbswidth(status_line) + 1, 2);
-        mc_wprintf(w, "%s ", _(P_STATLINE));
-        break;
       case 'D':
         psets(P_SOUND, yesno(P_SOUND[0] == 'N'));
-        mc_wlocate(w, mbswidth(alarm_sound) + 1, 3);
+        mc_wlocate(w, mbswidth(alarm_sound) + 1, 2);
         mc_wprintf(w, "%s", _(P_SOUND));
         break;
-      case 'E': /* fmg - letters cycle colors */
-        if (mfcolor == WHITE)
-          mfcolor = BLACK;
-        else
-          mfcolor++;
-        psets(P_MFG, J_col[mfcolor]);
-        mc_wlocate(w, mbswidth(foreground_color_menu) + 1, 4);
-        mc_wprintf(w, "%s   ", _(J_col[mfcolor]));
-        break;
-      case 'F': /* fmg - letters cycle colors */
-        if (mbcolor == WHITE)
-          mbcolor = BLACK;
-        else
-          mbcolor++;
-        psets(P_MBG, J_col[mbcolor]);
-        mc_wlocate(w, mbswidth(background_color_menu) + 1, 5);
-        mc_wprintf(w, "%s   ", _(J_col[mbcolor]));
-        break;
-      case 'G': /* fmg - letters cycle colors */
-        if (tfcolor == WHITE)
-          tfcolor = BLACK;
-        else
-          tfcolor++;
-        psets(P_TFG, J_col[tfcolor]);
-        mc_wlocate(w, mbswidth(foreground_color_term) + 1, 6);
-        mc_wprintf(w, "%s   ", _(J_col[tfcolor]));
-        if (us)
-          vt_pinit(us, tfcolor, tbcolor);
-        break;
-      case 'H': /* fmg - letters cycle colors */
-        if (tbcolor == WHITE)
-          tbcolor = BLACK;
-        else
-          tbcolor++;
-        psets(P_TBG, J_col[tbcolor]);
-        mc_wlocate(w, mbswidth(background_color_term) + 1, 7);
-        mc_wprintf(w, "%s   ", _(J_col[tbcolor]));
-        if (us)
-          vt_pinit(us, tfcolor, tbcolor);
-        break;
-      case 'I': /* fmg - letters cycle colors & redraw stat line */
-        if (sfcolor == WHITE)
-          sfcolor = BLACK;
-        else
-          sfcolor++;
-
-        /* fmg - this causes redraw of status line (if any)
-           in current color */
-
-        if (st) {
-          mc_wclose(st,0);
-          st = mc_wopen(0, LINES - 1, COLS - 1, LINES - 1, BNONE,
-                     XA_NORMAL, sfcolor, sbcolor, 1, 0, 1);
-          show_status();
-        }
-        psets(P_SFG, J_col[sfcolor]);
-        mc_wlocate(w, mbswidth(foreground_color_stat) + 1, 8);
-        mc_wprintf(w, "%s   ", _(J_col[sfcolor]));
-        break;
-      case 'J': /* fmg - letters cycle colors & redraw stat line */
-        if (sbcolor == WHITE)
-          sbcolor = BLACK;
-        else
-          sbcolor++;
-
-        /* fmg - this causes redraw of status line (if any)
-           in current color */
-
-        if (st) {
-          mc_wclose(st,0);
-          st = mc_wopen(0, LINES - 1, COLS - 1, LINES - 1, BNONE,
-                     XA_NORMAL, sfcolor, sbcolor, 1, 0, 0);
-          show_status();
-        }
-        psets(P_SBG, J_col[sbcolor]);
-        mc_wlocate(w, mbswidth(background_color_stat) + 1, 9);
-        mc_wprintf(w, "%s   ", _(J_col[sbcolor]));
-        break;
       case 'K': /* MARK updated 02/17/95 - Config history size */
-        pgets(w, mbswidth(history_buffer_size) + 1, 10,
+        pgets(w, mbswidth(history_buffer_size) + 1, 3,
               P_HISTSIZE, 6, 6, 0);
 
         /* In case gibberish or a value was out of bounds, */
@@ -1182,11 +1252,11 @@ static void doscrkeyb(void)
         else if (atoi(P_HISTSIZE) >= 5000)
           strcpy(P_HISTSIZE,"5000");
 
-        mc_wlocate(w, mbswidth(history_buffer_size) + 1, 10);
+        mc_wlocate(w, mbswidth(history_buffer_size) + 1, 3);
         mc_wprintf(w, "%s     ", P_HISTSIZE);
         break;
       case 'L': /* fmg - get local macros storage file */
-        pgets(w, mbswidth(macros_file) + 1, 11, P_MACROS, 64, 64, 1);
+        pgets(w, mbswidth(macros_file) + 1, 4, P_MACROS, 64, 64, 1);
 
         /* Try to open the file to read it in. */
         fp = fopen(pfix_home(P_MACROS), "r+");
@@ -1214,48 +1284,13 @@ static void doscrkeyb(void)
         break;
       case 'N':
         psets(P_MACENAB, yesno(P_MACENAB[0] == 'N'));
-        mc_wlocate(w, mbswidth(macros_enabled) + 1, 13);
+        mc_wlocate(w, mbswidth(macros_enabled) + 1, 6);
         mc_wprintf(w, "%s", _(P_MACENAB));
         break;
       case 'O': /* Character conversions - jl / 04.09.97 */
         doconv();
-        mc_wlocate(w, mbswidth(character_conversion) + 1, 14);
+        mc_wlocate(w, mbswidth(character_conversion) + 1, 7);
         mc_wprintf(w, "%-16.16s", _(P_CONVF));
-        break;
-      case 'P':
-        psets(P_ADDLINEFEED, yesno(P_ADDLINEFEED[0] == 'N'));
-        mc_wlocate(w, mbswidth(add_linefeed) + 1, 15);
-        mc_wprintf(w, "%s", _(P_ADDLINEFEED));
-        break;
-      case 'Q':
-        psets(P_LOCALECHO, yesno(P_LOCALECHO[0] == 'N'));
-        mc_wlocate(w, mbswidth(local_echo_str) + 1, 16);
-        mc_wprintf(w, "%s", _(P_LOCALECHO));
-        break;
-      case 'R':
-        psets(P_LINEWRAP, yesno(P_LINEWRAP[0] == 'N'));
-        mc_wlocate(w, mbswidth(line_wrap) + 1, 17);
-        mc_wprintf(w, "%s", _(P_LINEWRAP));
-        break;
-      case 'S':
-	psets(P_DISPLAYHEX, yesno(P_DISPLAYHEX[0] == 'N'));
-	mc_wlocate(w, mbswidth(display_hex_str) + 1, 18);
-	mc_wprintf(w, "%s", _(P_DISPLAYHEX));
-	display_hex = strcasecmp(P_DISPLAYHEX, "yes") == 0;
-	break;
-      case 'T':
-        psets(P_ADDCARRIAGERETURN, yesno(P_ADDCARRIAGERETURN[0] == 'N'));
-        mc_wlocate(w, mbswidth(add_carriagereturn) + 1, 19);
-        mc_wprintf(w, "%s", _(P_ADDCARRIAGERETURN));
-        break;
-      case 'U':
-	{
-	  int l = toggle_line_timestamp();
-	  sprintf(buf, "%d", l);
-	  psets(P_LINE_TIMESTAMP, buf);
-	  mc_wlocate(w, mbswidth(use_line_timestamp) + 1, 20);
-	  mc_wprintf(w, "%-35s", line_timestamp_description());
-	}
         break;
      }
   }
@@ -1451,7 +1486,8 @@ static void (*funcs1[])(void) = {
   doproto,
   doserial,
   domodem,
-  doscrkeyb,
+  do_menu_screen,
+  do_menu_keyboard_and_misc,
   vdodflsave,
   donamsave,
   NULL,
@@ -1465,7 +1501,8 @@ static char const *menu1[] = {
   N_("File transfer protocols"),
   N_("Serial port setup"),
   N_("Modem and dialing"),
-  N_("Screen and keyboard"),
+  N_("Screen"),
+  N_("Keyboard and Misc"),
   save_setup_as_menu,
   N_("Save setup as.."),
   N_("Exit"),
@@ -1489,10 +1526,10 @@ int config(int setup)
   save_setup_as_menu[sizeof(save_setup_as_menu) - 1] = 0;
 
   if (!setup)
-    menu1[8] = NULL;
+    menu1[9] = NULL;
 
-  c = mc_wselect(13, 10, menu1, funcs1, _("configuration"), stdattr, mfcolor, mbcolor);
-  if (c == 9)
+  c = mc_wselect(13, 9, menu1, funcs1, _("configuration"), stdattr, mfcolor, mbcolor);
+  if (c == 10)
     return 1;
   return 0;
 }
